[Mantaflow] FLIP particles not visible #72971

Closed
opened 2020-01-08 14:28:13 +01:00 by Pavel Blend · 20 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13417 Core Profile Context 15.301.1901.0

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-06 20:54, hash: 3a35301fd1
Worked: (optional)

Short description of error
If you bake any liquid, after baking FLIP particles will not be visible in the 3D window. The checkmark Liquid is set. For the FLIP particles to appear, you need to click on the Liquid checkmark (the checkmark will not change its state). After these actions, particles will appear.

Exact steps for others to reproduce the error
Reproduced in any scene.

  • Default cube: Physics > Fluid > Type: Domain; Domain Type: Liquid
  • Observe that - [x] Liquid appears as checked
  • Observe that, under Particles, there is no "FLIP Particles" system
  • Observe that checking - [x] Liquid manually doesn't go to an "off" state but stays on a "on" state; it also triggers the creation of a particle system
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13417 Core Profile Context 15.301.1901.0 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-06 20:54, hash: `3a35301fd1` Worked: (optional) **Short description of error** If you bake any liquid, after baking FLIP particles will not be visible in the 3D window. The checkmark Liquid is set. For the FLIP particles to appear, you need to click on the Liquid checkmark (the checkmark will not change its state). After these actions, particles will appear. **Exact steps for others to reproduce the error** Reproduced in any scene. - Default cube: Physics > Fluid > Type: Domain; Domain Type: Liquid - Observe that `- [x] Liquid` appears as checked - Observe that, under Particles, there is no "FLIP Particles" system - Observe that checking `- [x] Liquid` manually doesn't go to an "off" state but stays on a "on" state; it also triggers the creation of a particle system
Author

Added subscriber: @Pavel_Blend

Added subscriber: @Pavel_Blend

#73009 was marked as duplicate of this issue

#73009 was marked as duplicate of this issue

Added subscriber: @filibis

Added subscriber: @filibis

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't reproduce this. Baking domain works as intented and shows particles. Could you share a .blend file that is not working for you?

I can't reproduce this. Baking domain works as intented and shows particles. Could you share a .blend file that is not working for you?
Author

This error occurs in this scene:
mantaflow_bug_01.zip

Perhaps the problem is again in my old video card.

This error occurs in this scene: [mantaflow_bug_01.zip](https://archive.blender.org/developer/F8266026/mantaflow_bug_01.zip) Perhaps the problem is again in my old video card.

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Allright this happens for me as well for this file. Unchecking and checking Liquid checkbox make the particles data appear. Let's wait for a developer to reproduce the issue.

Allright this happens for me as well for this file. Unchecking and checking Liquid checkbox make the particles data appear. Let's wait for a developer to reproduce the issue.
Sebastián Barschkis was assigned by Emir Sinan Gürlek 2020-01-08 16:16:47 +01:00

Added subscribers: @mano-wii, @juang3d, @bent, @NicolaSap

Added subscribers: @mano-wii, @juang3d, @bent, @NicolaSap

The problem boils down to the fact that, when an oject is assigned Domain Type = Fluid, the "Liquid" checkbox appears selected even if it's not.

A minimal way of reproducing the core error is:

  • Default cube: Physics > Fluid > Type: Domain; Domain Type: Liquid
  • Observe that - [x] Liquid appears as checked
  • Observe that, under Particles, there is no "FLIP Particles" system
  • Observe that checking - [x] Liquid manually doesn't go to an "off" state but stays on a "on" state; it also triggers the creation of a particle system
The problem boils down to the fact that, when an oject is assigned Domain Type = Fluid, the "Liquid" checkbox appears selected even if it's not. A minimal way of reproducing the core error is: - Default cube: Physics > Fluid > Type: Domain; Domain Type: Liquid - Observe that `- [x] Liquid` appears as checked - Observe that, under Particles, there is no "FLIP Particles" system - Observe that checking `- [x] Liquid` manually doesn't go to an "off" state but stays on a "on" state; it also triggers the creation of a particle system

Thank you @NicolaSap, I will update the description.

Thank you @NicolaSap, I will update the description.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Unfortunately I'm not able to fix this myself, like I wanted to.

If it helps, it looks like adding something like

  RNA_def_property_update(prop, NC_OBJECT | ND_DRAW, "rna_Fluid_flip_parts_update");

to rna prop: "domain_type" would likely fix this (except this is not the right way, and for example it would break Quick Liquid, which instead works correctly right now because it calls for the update directly from Python).

I'd like to point out that this bug has a potentially very high impact on usability!

I'm worried that those who are testing 2.82 are not taking advantage of the FLIP particle visualization at all, because it doesn't work out of the box!

Unfortunately I'm not able to fix this myself, like I wanted to. If it helps, it looks like adding something like ``` RNA_def_property_update(prop, NC_OBJECT | ND_DRAW, "rna_Fluid_flip_parts_update"); ``` to rna prop: `"domain_type"` would likely fix this (except this is not the right way, and for example it would break Quick Liquid, which instead works correctly right now because it calls for the update directly from Python). I'd like to point out that this bug has a potentially very high impact on usability! I'm worried that those who are testing 2.82 are *not* taking advantage of the FLIP particle visualization at all, because it doesn't work out of the box!

This issue was referenced by cdd937c6dd

This issue was referenced by cdd937c6dd988feed1d9e5d023b8b7b8bec7665c

This issue was referenced by d571e9055a

This issue was referenced by d571e9055a0a81f4bd1fd9f574b81783d3f648fd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

I just incorporated the suggestions from the discussion. I hope this fixes the issue.

I just incorporated the suggestions from the discussion. I hope this fixes the issue.

I've tried it and it seems to work well (both manual and Quick liquid)!

Not sure who should do this, but this must be ported to the 2.82 branch too

I've tried it and it seems to work well (both manual and Quick liquid)! Not sure who should do this, but this must be ported to the 2.82 branch too

(Thanks!)

(Thanks!)

@NicolaSap Yes, I accidentally committed this to master first instead of the 2.82 branch. Should be fixed now.

@NicolaSap Yes, I accidentally committed this to master first instead of the 2.82 branch. Should be fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72971
No description provided.