Fluid: Fix T72971

Incorporated suggestions from the task discussion